src/yini_test/cases/golden/lenient/valid/sections/section-numeric-shorthand-level-1.yini
@yini

^1 Config
name = "lenient-numeric-shorthand-level-1"
enabled = true
