src/yini_test/cases/golden/lenient/invalid/sections/section-skip-level-via-shorthand.yini
@yini

^1 Root
name = "root"

^9 Skipped
value = true
